--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-Flask==2.0.1
-Flask_Login==0.5.0
-Flask_SQLAlchemy==2.5.1
-Flask_WTF==0.15.1
-imutils==0.5.4
-matplotlib==3.1.3
-numpy==1.18.5
-opencv_python==4.5.1.48
-pandas==1.0.1
-parselmouth==1.1.1
-plotly==5.3.1
-python_pptx==0.6.19
-sounddevice==0.4.1
-SoundFile==0.10.3.post1
-Werkzeug==2.0.2
-WTForms==2.3.3
+Flask
+Flask_Login
+Flask_SQLAlchemy
+Flask_WTF
+imutils
+matplotlib
+numpy
+opencv_python
+pandas
+parselmouth
+plotly
+python_pptx
+sounddevice
+SoundFile
+Werkzeug
+WTForms
